Comienzo JS y tablero muelto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     </aside>
 
     <!-- Tablero -->
-    <main></main>
+    <main class="chess"></main>
+
+    <!-- Jugadas -->
+    <aside class="plays"></aside>
     
+    <script src="build/js/index.js"></script>
   </body>
 </html>
